--- a/index.html
+++ b/index.html
@@ -57,12 +57,12 @@
 		<div class="home-video-wrapper">
 
 		<div class="homevideo-container">
-           <div id="P1" class="bg-player" style="display:block; margin: auto; background: rgba(0,0,0,0.5)" data-property="{videoURL:'https://youtu.be/Kha-ZiRNusI',containment:'.homevideo-container', quality: 'hd720', showControls: false, autoPlay:true, mute:true, startAt:0, opacity:1}"></div>
+           <div id="P1" class="bg-player" style="display:block margin: auto; background: rgba(0,0,0,0.5)" data-property="{videoURL:'http://youtu.be/Kha-ZiRNusI',containment:'.homevideo-container', quality: 'hd720', showControls: false, autoPlay:true, mute:true, startAt:0, opacity:1}"></div>
 		</div>
 		<div class="overlay">
 			<div class="text-center video-caption">
 				<div class="wow bounceInDown" data-wow-offset="0" data-wow-delay="0.8s">
-					<h1 class="big-heading font-light"><span id="js-rotating">We are valera, Awesome Bootstrap theme, Get better appearance, Craft from pixel </span></h1>
+					<h1 class="big-heading font-light"><span id="js-rotating">Добро пожаловать, Какой-то текст, Еще текст, И еще немного текста </span></h1>
 				</div>
 				<div class="wow bounceInUp" data-wow-offset="0" data-wow-delay="1s">
 					<div class="margintop-30">
@@ -74,7 +74,7 @@
 		</div>
     </section>
 	<!-- /Section: intro -->
-
+	
 
     <!-- Navigation -->
     <div id="navigation">
