--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 		<div class="home-video-wrapper">
 
 		<div class="homevideo-container">
-           <div id="P1" class="bg-player" style="display:block; margin: auto; background: rgba(0,0,0,0.5)" data-property="{videoURL:'http://youtu.be/Kha-ZiRNusI',containment:'.homevideo-container', quality: 'hd720', showControls: false, autoPlay:true, mute:true, startAt:0, opacity:1}"></div>
+      <!--Видео убрать границы -->     <div id="P1" class="bg-player" style="display:block; margin: auto; background: rgba(0,0,0,0.5)" data-property="{videoURL:'http://youtu.be/lUDGs4J2K80',containment:'.homevideo-container', quality: 'hd720', showControls: false, autoPlay:true, mute:true, startAt:0, opacity:1}"></div>
 		</div>
 		<div class="overlay">
 			<div class="text-center video-caption">
@@ -84,7 +84,7 @@
                                           <div class="col-md-2 mob-logo">
                                                 <div class="row">
                                                       <div class="site-logo">
-                                                            <a href="index.html"><img src="img/logo-dark.png" alt="" /></a>
+                                                            <a href="index.html"><img src="img/logo-dark.png" alt="" /></a><!-- Лого не мое-->
                                                       </div>
                                                 </div>
                                           </div>
@@ -153,7 +153,7 @@
 				<div class="team-wrapper-big wow bounceInUp" data-wow-delay="0.8s">
                         <div class="team-wrapper-overlay">
                           <h5>Алиса Коркина</h5>
-                          <p>Я - в социальных сетях.</p>
+                          <p>Я - в социальных сетях.</p> <!--Пофиксить соцсети - инст, вк? -->
                           <div class="social-icons">
 								<ul class="team-social">
 									<li class="social-facebook"><a href="https://www.facebook.com/alyskor"><i class="fa fa-facebook"></i></a></li>
@@ -161,7 +161,7 @@
 									<li class="social-google"><a href="#"><i class="fa fa-google-plus"></i></a></li> -->
 								</ul>
                           </div>
-                        </div>
+                        </div> <!-- Фотка не по центру -->
                         <img src="https://pp.userapi.com/c845016/v845016375/f9caa/xH5eEhSjaFo.jpg" alt="..." />
                 </div>
             </div>
