--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                                           <div class="col-md-2 mob-logo">
                                                 <div class="row">
                                                       <div class="site-logo">
-                                                            <a href="index.html"><img src="img/logo-dark.png" alt="" /></a><!-- Лого не мое-->
+                                                            <a href="index.html"><img width="100" src="https://psv4.userapi.com/c848224/u38265716/docs/d15/8ea36696bc97/4_Color_Logo_CB_1.png" alt="" /></a><!-- Лого не мое-->
                                                       </div>
                                                 </div>
                                           </div>
