--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 		<div class="home-video-wrapper">
 
 		<div class="homevideo-container">
-      <!--Видео убрать границы -->     <div id="P1" class="bg-player" style="display:block; margin: auto; background: rgba(0,0,0,0.5)" data-property="{videoURL:'http://youtu.be/lUDGs4J2K80',containment:'.homevideo-container', quality: 'hd720', showControls: false, autoPlay:true, mute:true, startAt:0, opacity:1}"></div>
+     <div id="P1" class="bg-player" style="display:block; margin: auto; background: rgba(0,0,0,0.5)" data-property="{videoURL:'http://youtu.be/lUDGs4J2K80',containment:'.homevideo-container', quality: 'hd720', showControls: false, autoPlay:true, mute:true, startAt:0, opacity:1}"></div>
 		</div>
 		<div class="overlay">
 			<div class="text-center video-caption">
@@ -284,6 +284,20 @@
 					<h2 class="h-bold">Портфолио</h2>
 					<div class="divider-header"></div>
 					<p></p>
+
+          <!-- 1. Link to jQuery (1.8 or later), -->
+          <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script> <!-- 33 KB -->
+
+          <!-- fotorama.css & fotorama.js. -->
+          <link  href="http://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.css" rel="stylesheet"> <!-- 3 KB -->
+          <script src="http://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.js"></script> <!-- 16 KB -->
+
+          <!-- 2. Add images to <div class="fotorama"></div>. -->
+          <div class="fotorama">
+            <a href="https://youtu.be/UxPpxDxh7RY">
+              <a href="https://youtu.be/HlWvCeTSdu4">
+          </div>
+
 					</div>
 					</div>
 				</div>
