--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
 
 		</div>
 
-		<div class="container">
+		<!--<div class="container">
 			<div class="row">
                 <div class="col-sm-12 col-md-12 col-lg-12" >
 					<div class="wow bounceInUp" data-wow-delay="0.4s">
@@ -322,7 +322,7 @@
 					</div>
                 </div>
             </div>
-		</div>
+		</div>-->
 
 	</section>
 	<!-- /Section: works -->
