--- a/index.html
+++ b/index.html
@@ -284,20 +284,6 @@
 					<h2 class="h-bold">Портфолио</h2>
 					<div class="divider-header"></div>
 					<p></p>
-
-          <!-- 1. Link to jQuery (1.8 or later), -->
-          <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script> <!-- 33 KB -->
-
-          <!-- fotorama.css & fotorama.js. -->
-          <link  href="http://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.css" rel="stylesheet"> <!-- 3 KB -->
-          <script src="http://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.js"></script> <!-- 16 KB -->
-
-          <!-- 2. Add images to <div class="fotorama"></div>. -->
-          <div class="fotorama">
-            <a href="https://youtu.be/UxPpxDxh7RY">
-              <a href="https://youtu.be/HlWvCeTSdu4">
-          </div>
-
 					</div>
 					</div>
 				</div>
@@ -305,11 +291,11 @@
 
 		</div>
 
-		<!--<div class="container">
+		<div class="container">
 			<div class="row">
                 <div class="col-sm-12 col-md-12 col-lg-12" >
 					<div class="wow bounceInUp" data-wow-delay="0.4s">
-                    <div id="owl-works" class="owl-carousel">
+                    <!--<div id="owl-works" class="owl-carousel">
                         <div class="item"><a href="img/works/1.jpg" title="This is an image title" data-lightbox-gallery="gallery1" data-lightbox-hidpi="img/works/1@2x.jpg"><img src="img/works/1.jpg" class="img-responsive" alt="img"></a></div>
                         <div class="item"><a href="img/works/2.jpg" title="This is an image title" data-lightbox-gallery="gallery1" data-lightbox-hidpi="img/works/2@2x.jpg"><img src="img/works/2.jpg" class="img-responsive " alt="img"></a></div>
                         <div class="item"><a href="img/works/3.jpg" title="This is an image title" data-lightbox-gallery="gallery1" data-lightbox-hidpi="img/works/3@2x.jpg"><img src="img/works/3.jpg" class="img-responsive " alt="img"></a></div>
@@ -318,11 +304,23 @@
                         <div class="item"><a href="img/works/6.jpg" title="This is an image title" data-lightbox-gallery="gallery1" data-lightbox-hidpi="img/works/6@2x.jpg"><img src="img/works/6.jpg" class="img-responsive " alt="img"></a></div>
                         <div class="item"><a href="img/works/7.jpg" title="This is an image title" data-lightbox-gallery="gallery1" data-lightbox-hidpi="img/works/7@2x.jpg"><img src="img/works/7.jpg" class="img-responsive " alt="img"></a></div>
                         <div class="item"><a href="img/works/8.jpg" title="This is an image title" data-lightbox-gallery="gallery1" data-lightbox-hidpi="img/works/8@2x.jpg"><img src="img/works/8.jpg" class="img-responsive " alt="img"></a></div>
+                    </div>-->
+                    <!-- 1. Link to jQuery (1.8 or later), -->
+                    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script> <!-- 33 KB -->
+
+                    <!-- fotorama.css & fotorama.js. -->
+                    <link  href="http://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.css" rel="stylesheet"> <!-- 3 KB -->
+                    <script src="http://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.js"></script> <!-- 16 KB -->
+
+                    <!-- 2. Add images to <div class="fotorama"></div>. -->
+                    <div class="fotorama">
+                      <a href="https://youtu.be/UxPpxDxh7RY"></a>
+                      <a href="https://youtu.be/HlWvCeTSdu4"></a>
                     </div>
 					</div>
                 </div>
             </div>
-		</div>-->
+		</div>
 
 	</section>
 	<!-- /Section: works -->
@@ -407,7 +405,6 @@
     <!-- Core JavaScript Files -->
     <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
-	<script src="http://maps.google.com/maps/api/js?sensor=false"></script>
 	<script src="js/jquery.sticky.js"></script>
 	<script src="js/slippry.min.js"></script>
 	<script src="js/jquery.flexslider-min.js"></script>
