--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
     <link href="css/style.css" rel="stylesheet">
 	<link href="color/default.css" rel="stylesheet">
 
+  <link  href="http://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.css" rel="stylesheet"> <!-- Frame -->
+
 </head>
 
 <body id="page-top" data-spy="scroll" data-target=".navbar-custom">
@@ -127,6 +129,7 @@
     </div>
     <!-- /Navigation -->
 
+
 	<!-- Section: about -->
     <section id="about" class="home-section color-dark bg-white">
 		<div class="container marginbot-50">
@@ -147,24 +150,23 @@
 		<div class="text-center">
 		<div class="container">
 
-
         <div class="row">
-			<div class="col-xs-6 col-sm-3 col-md-3">
-				<div class="team-wrapper-big wow bounceInUp" data-wow-delay="0.8s">
-                        <div class="team-wrapper-overlay">
-                          <h5>Алиса Коркина</h5>
-                          <p>Я - в социальных сетях.</p> <!--Пофиксить соцсети - инст, вк? -->
-                          <div class="social-icons">
-								<ul class="team-social">
-									<li class="social-facebook"><a href="https://www.facebook.com/alyskor"><i class="fa fa-facebook"></i></a></li>
-									<!-- <li class="social-twitter"><a href="#"><i class="fa fa-twitter"></i></a></li>
-									<li class="social-google"><a href="#"><i class="fa fa-google-plus"></i></a></li> -->
-								</ul>
-                          </div>
-                        </div> <!-- Фотка не по центру -->
-                        <img src="https://pp.userapi.com/c845016/v845016375/f9caa/xH5eEhSjaFo.jpg" alt="..." />
-                </div>
+    			<div class="col-xs-12 col-sm-12 col-md-12">
+    				<div class="team-wrapper-big wow bounceInUp" data-wow-delay="0.2s">
+              <div class="team-wrapper-overlay">
+                  <h5>Алиса Коркина</h5>
+                  <p>Я - в социальных сетях.</p> <!--Пофиксить соцсети - инст, вк? -->
+                  <div class="social-icons">
+    								<ul class="team-social">
+    									<li class="social-facebook"><a href="https://www.facebook.com/alyskor"><i class="fa fa-facebook"></i></a></li>
+    									<!--<li class="social-twitter"><a href="#"><i class="fa fa-twitter"></i></a></li>
+    									<li class="social-google"><a href="#"><i class="fa fa-google-plus"></i></a></li>-->
+    								</ul>
+                  </div>
+              </div> <!-- Фотка не по центру -->
+              <img src="https://pp.userapi.com/c845016/v845016375/f9caa/xH5eEhSjaFo.jpg" alt="" />
             </div>
+          </div>
         </div>
 		</div>
 		</div>
@@ -259,7 +261,7 @@
 					<div class="service-desc">
 						<h5>Графика</h5>
 						<p>
-						Использую Adobe Photoshop и Pixly для отрисовки пиксельной графики для компьютерных игр.
+						Использую Adobe Photoshop и Pixly для отрисовки пиксельной графики.
 						</p>
 					</div>
                 </div>
@@ -292,32 +294,31 @@
 		</div>
 
 		<div class="container">
-			<div class="row">
-                <div class="col-sm-12 col-md-12 col-lg-12" >
+<div class="main">
 					<div class="wow bounceInUp" data-wow-delay="0.4s">
-                    <!--<div id="owl-works" class="owl-carousel">
-                        <div class="item"><a href="img/works/1.jpg" title="This is an image title" data-lightbox-gallery="gallery1" data-lightbox-hidpi="img/works/1@2x.jpg"><img src="img/works/1.jpg" class="img-responsive" alt="img"></a></div>
-                        <div class="item"><a href="img/works/2.jpg" title="This is an image title" data-lightbox-gallery="gallery1" data-lightbox-hidpi="img/works/2@2x.jpg"><img src="img/works/2.jpg" class="img-responsive " alt="img"></a></div>
-                        <div class="item"><a href="img/works/3.jpg" title="This is an image title" data-lightbox-gallery="gallery1" data-lightbox-hidpi="img/works/3@2x.jpg"><img src="img/works/3.jpg" class="img-responsive " alt="img"></a></div>
-                        <div class="item"><a href="img/works/4.jpg" title="This is an image title" data-lightbox-gallery="gallery1" data-lightbox-hidpi="img/works/4@2x.jpg"><img src="img/works/4.jpg" class="img-responsive " alt="img"></a></div>
-                        <div class="item"><a href="img/works/5.jpg" title="This is an image title" data-lightbox-gallery="gallery1" data-lightbox-hidpi="img/works/5@2x.jpg"><img src="img/works/5.jpg" class="img-responsive " alt="img"></a></div>
-                        <div class="item"><a href="img/works/6.jpg" title="This is an image title" data-lightbox-gallery="gallery1" data-lightbox-hidpi="img/works/6@2x.jpg"><img src="img/works/6.jpg" class="img-responsive " alt="img"></a></div>
-                        <div class="item"><a href="img/works/7.jpg" title="This is an image title" data-lightbox-gallery="gallery1" data-lightbox-hidpi="img/works/7@2x.jpg"><img src="img/works/7.jpg" class="img-responsive " alt="img"></a></div>
-                        <div class="item"><a href="img/works/8.jpg" title="This is an image title" data-lightbox-gallery="gallery1" data-lightbox-hidpi="img/works/8@2x.jpg"><img src="img/works/8.jpg" class="img-responsive " alt="img"></a></div>
-                    </div>-->
-                    <!-- 1. Link to jQuery (1.8 or later), -->
-                    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script> <!-- 33 KB -->
-
-                    <!-- fotorama.css & fotorama.js. -->
-                    <link  href="http://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.css" rel="stylesheet"> <!-- 3 KB -->
-                    <script src="http://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.js"></script> <!-- 16 KB -->
-
-                    <!-- 2. Add images to <div class="fotorama"></div>. -->
-                    <div class="fotorama">
+            <div class="content">
+               <div class="fotorama">
+                 <img src="https://pp.userapi.com/c850032/v850032487/869c6/oOY7Ltjw0VQ.jpg"></img><!--Видео-->
                       <a href="https://youtu.be/UxPpxDxh7RY"></a>
                       <a href="https://youtu.be/HlWvCeTSdu4"></a>
+                      <a href="https://youtu.be/XayOH00RuJ0"></a>
+                      <!--Анимация-->
+                      <img src="https://pp.userapi.com/c845321/v845321487/101142/buIW8UOvpcA.jpg"></img>
+                      <a href="https://vk.com/doc174437152_476392157?hash=58a63fef74f09eeef6&dl=01b80601799ba88416&wnd=1&module=public&mp4=1"></a>
+                      <a href="https://youtu.be/JjD6QFGNMKk"></a>
+                      <!--Графика-->
+                      <img src="https://pp.userapi.com/c845420/v845420487/1054d4/tJfbfIQX7_c.jpg"></img>
+                      <img src="https://pp.userapi.com/c850528/v850528435/14814/Y7U5PtSTWZE.jpg"></img>
+                      <img src="https://pp.userapi.com/c849424/v849424487/8ad35/z6PPGcDNmuU.jpg"></img>
+                      <img src="https://pp.userapi.com/c850032/v850032375/866f1/um3sPIyO9Yo.jpg"></img>
                     </div>
-					</div>
+                    <div class="comment">
+                      <p>В галерее представлены как полностью мои проекты, так и те, в которых я принимала участие.</p>
+                      <p>Для получения более подробной информации о проектах и моей роли в них обращайтесь ко мне в социальных сетях или используйте форму внизу страницы.</p>
+
+                    </div>
+                  </div>
+				        	</div>
                 </div>
             </div>
 		</div>
@@ -420,6 +421,13 @@
 	<script src="js/nivo-lightbox.min.js"></script>
 	<script src="js/jquery.nicescroll.min.js"></script>
     <script src="js/custom.js"></script>
+
+    <!-- 1. Link to jQuery (1.8 or later), -->
+    <!--<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script> --> <!-- Fotorama -->
+
+    <!-- fotorama.css & fotorama.js. -->
+
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.js"></script> <!-- 16 KB -->
 </body>
 
 </html>
