--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
                       <img src="https://pp.userapi.com/c850032/v850032375/866f1/um3sPIyO9Yo.jpg"></img>
                     </div>
                     <div class="comment">
-                      <p>В галерее представлены как полностью мои проекты, так и те, в которых я принимала участие.</p>
+                      <p>В этой галерее представлены как полностью мои проекты, так и те, в которых я принимала участие.</p>
                       <p>Для получения более подробной информации о проектах и моей роли в них обращайтесь ко мне в социальных сетях или используйте форму внизу страницы.</p>
 
                     </div>
