--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
     				<div class="team-wrapper-big wow bounceInUp" data-wow-delay="0.2s">
               <div class="team-wrapper-overlay">
                   <h5>Алиса Коркина</h5>
-                  <p>Я - в социальных сетях.</p> <!--Пофиксить соцсети - инст, вк? -->
+                  <p>Я - в социальных сетях.</p> <!-Инст, вк? -->
                   <div class="social-icons">
     								<ul class="team-social">
     									<li class="social-facebook"><a href="https://www.facebook.com/alyskor"><i class="fa fa-facebook"></i></a></li>
@@ -172,19 +172,6 @@
 		</div>
 	</section>
 	<!-- /Section: about -->
-
-	<!-- Section: parallax 1 -->
-	<!--<section id="parallax1" class="home-section parallax text-light" data-stellar-background-ratio="0.5">
-           <div class="container">
-				<div class="row">
-					<div class="col-md-12">
-						<div class="text-center">
-						<h2 class="big-heading highlight-dark wow bounceInDown" data-wow-delay="0.2s">Талант развивается из чувства любви к делу, возможно даже, что талант — в сущности его — и есть любовь к делу, к процессу работы.</h2>
-						</div>
-					</div>
-				</div>
-            </div>
-	</section>-->
 
 	<!-- Section: services -->
     <section id="service" class="home-section color-dark bg-white">
@@ -246,7 +233,7 @@
       					<div class="service-desc">
       						<h5>Анимация</h5>
       						<p>
-      						Анимирую изображения в Adobe Animate. Также могу создать анимацию в Adobe Photoshop.
+      						Анимирую изображения в Adobe Animate или в Adobe Photoshop.
       						</p>
       					</div>
                       </div>
@@ -427,7 +414,7 @@
 
     <!-- fotorama.css & fotorama.js. -->
 
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.js"></script> <!-- 16 KB -->
+    <script src="js/gallery.js"></script> <!-- 16 KB -->
 </body>
 
 </html>
