--- a/index.html
+++ b/index.html
@@ -23,6 +23,15 @@
 
   <link  href="http://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.css" rel="stylesheet"> <!-- Frame -->
 
+
+<<!-- код для сбора писем-->
+<script type="text/javascript" src="https://cdn.emailjs.com/sdk/2.2.4/email.min.js"></script>
+<script type="text/javascript">
+   (function(){
+      emailjs.init("user_lgrVAEhirv4aFvhmA5mLO");
+   })();
+</script>
+
 </head>
 
 <body id="page-top" data-spy="scroll" data-target=".navbar-custom">
@@ -155,7 +164,7 @@
     				<div class="team-wrapper-big wow bounceInUp" data-wow-delay="0.2s">
               <div class="team-wrapper-overlay">
                   <h5>Алиса Коркина</h5>
-                  <p>Я - в социальных сетях.</p> <!-Инст, вк? -->
+                  <p>Я - в социальных сетях.</p> <!--Инст, вк? -->
                   <div class="social-icons">
     								<ul class="team-social">
     									<li class="social-facebook"><a href="https://www.facebook.com/alyskor"><i class="fa fa-facebook"></i></a></li>
@@ -340,19 +349,19 @@
 						<form id="contact-form" class="wow bounceInUp" data-wow-offset="10" data-wow-delay="0.2s">
 						<div class="row marginbot-20">
 							<div class="col-md-6 xs-marginbot-20">
-								<input type="text" class="form-control input-lg" id="name" placeholder="Имя" required="required" />
+								<input type="text" class="form-control input-lg" id="name" name="name" placeholder="Имя" required="required" />
 							</div>
 							<div class="col-md-6">
-								<input type="email" class="form-control input-lg" id="email" placeholder="Электронный адрес" required="required" />
+								<input type="email" class="form-control input-lg" id="email" name="email" placeholder="Электронный адрес" required="required" />
 							</div>
 						</div>
 						<div class="row">
 							<div class="col-md-12">
 								<div class="form-group">
-										<input type="text" class="form-control input-lg" id="subject" placeholder="Тема" required="required" />
+										<input type="text" class="form-control input-lg" id="subject" name= "subject" placeholder="Тема" required="required" />
 								</div>
 								<div class="form-group">
-									<textarea name="message" id="message" class="form-control" rows="4" cols="25" required="required"
+									<textarea name="message" id="message" name="message" class="form-control" rows="4" cols="25" required="required"
 										placeholder="Что Вы хотели сказать?"></textarea>
 								</div>
 								<button type="submit" class="btn btn-skin btn-lg btn-block" id="btnContactUs">
@@ -415,6 +424,29 @@
     <!-- fotorama.css & fotorama.js. -->
 
     <script src="js/gallery.js"></script> <!-- 16 KB -->
+
+
+<script>    var myform = $("form#myform");
+  myform.submit(function(event){
+  	event.preventDefault();
+
+    // Change to your service ID, or keep using the default service
+    var service_id = "default_service";
+    var template_id = "template_QYo1WAau";
+
+    myform.find("button").text("Sending...");
+    emailjs.sendForm(service_id,template_id,myform[0])
+    	.then(function(){
+      	alert("Sent!");
+         myform.find("button").text("Send");
+      }, function(err) {
+         alert("Send email failed!\r\n Response:\n " + JSON.stringify(err));
+         myform.find("button").text("Send");
+      });
+    return false;
+  });
+</script>
+    </script>
 </body>
 
 </html>
